# kubernetes-kind-examples

./: .gitignore  AWS+Training_+Basic+AWS+EKS+deployment+with+NGINX.doc  README.md  docker-compose.yaml  pyproject.toml
deployment/dev/argo/: app-name.yaml  app-role.yaml  app-user.yaml  applicationset-dns.yaml  full-manifest.yaml  guestbook.yaml  helm-multisource-yaml  kustomize-app.yaml  kustomize-guestbook.yaml  nginx-helm.yaml  nginx-multisource.yaml  nginx-values.yaml  role-binding.yaml  sealed-secrets.yaml
deployment/dev/certs/: staging-issuer.yaml
deployment/dev/jenkins/: jenkins-multisource.yaml  jenkins-values.yaml
deployment/dev/keda/: nginx-deployment.yaml  nginx-service.yaml  scaled-job.yaml  scaled-object-http.yaml  scaled-object.yaml
deployment/dev/knative/: 100-create-sequence.yaml  100-event-display.yaml  200-broker.yaml  200-create-trigger.yaml  200-log-trigger.yaml  300-sinkbinding.yaml  config-network.yaml  hello.yaml  nginx-service.yaml
deployment/dev/kuard/: kuard-ingress.yaml
deployment/dev/kubeflow/: gateway-patch.yaml  peer-auth.yaml  sklearn-inference-test.yaml  sklearn-inference.yaml
deployment/dev/kuberay/: ray-cluster.gpu.yaml  square.py  square_client.py  square_submit.py
deployment/dev/minio/: minio-deployment.yaml  minio-ingress.yaml  minio-service.yaml
deployment/dev/ml/: ml-deployment.yaml  ml-ingress.yaml  ml-service.yaml  vol-ml-prefect.yaml
deployment/dev/redis/: redis-deployment.yaml  redis-ingress.yaml  redis-service.yaml
sentiment-analysis-app/: func.yaml  requirements.txt  setup.py
(+8 files in other folders)
