[tool.poetry]
name = "kubernetes-kind-examples"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["default"], version = "^2.43.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
